fix styles for dark mode

--- a/style.css
+++ b/style.css
@@ -41,13 +41,15 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
-  background-color: gainsboro;
+  border-color: #3e6fe3;
+  background-color: #595959;
 }
+
 button:focus,
 button:focus-visible {
-  background-color: #d0d0d0;
+  background-color: dimgrey;
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -56,10 +58,17 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+
   button {
     background-color: #f1f1f1;
+  }
+
+  button:hover {
+    background-color: gainsboro;
+  }
+
+  button:focus,
+  button:focus-visible {
+    background-color: #d0d0d0;
   }
 }
